--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -61,17 +61,21 @@
       <main class="main">
         <div class="max-width-wrapper">
           <p>
-            Builder of Native apps at
-            <a class="link" href="https://wembleystudios.com/" target="_blank">
-              Wembley Studios
-              <span class="revealed" aria-hidden="true">Wembley Studios</span>
+            Builder of React Native apps at
+            <a class="link" href="https://silicondali.com" target="_blank">
+              Silicon Dali
+              <span class="revealed" aria-hidden="true">Silicon Dali</span>
             </a>
             in Salamanca, Spain.
           </p>
           <p>
             Norwich, England native. UX and animation lover. Food fanatic.
             Immersed in culture, fitness or gaming when not coding. Hola
-            <a class="link" href="https://x.com/tomhendra" target="_blank">
+            <a
+              class="link"
+              href="https://bsky.app/profile/tomhendra.dev"
+              target="_blank"
+            >
               @tomhendra
               <span class="revealed" aria-hidden="true">@tomhendra</span> </a
             >.
@@ -88,8 +92,17 @@
     <noscript>
       <div
         style="
-          font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-            Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+          font-family:
+            system-ui,
+            -apple-system,
+            BlinkMacSystemFont,
+            'Segoe UI',
+            Roboto,
+            Oxygen,
+            Ubuntu,
+            Cantarell,
+            'Open Sans',
+            'Helvetica Neue',
             sans-serif;
           background-color: #646cff;
           color: white;
