feat: update meta

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Software developer specialising in React based in Spain."
+      content="Software developer specialising in React Native based in Spain."
     />
     <title>Tom Hendra</title>
   </head>
