--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
       </header>
       <main class="main">
         <div class="max-width-wrapper">
-          <p>
-            Builder of React Native apps at
-            <a class="link" href="https://silicondali.com" target="_blank">
-              Silicon Dali
-              <span class="revealed" aria-hidden="true">Silicon Dali</span>
-            </a>
-            in Salamanca, Spain.
-          </p>
+          <p>Builder of React Native apps based in Salamanca, Spain.</p>
           <p>
             Norwich, England native. UX and animation lover. Food fanatic.
             Immersed in culture, fitness or gaming when not coding. Hola
